Offset down by 50px

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     background-color: rgb(245, 76, 104);
     position: relative;
+    top: 50px;
     text-align: center;
     transform: translate();
     font-family: Veranda, Arial, sans-serif;
