--- a/reasons.css
+++ b/reasons.css
@@ -2,14 +2,11 @@ body {
     background-color: rgb(245, 76, 104);
     position: relative;
     top: 50px;
-    text-align: center;
     font-family: Veranda, Arial, sans-serif;
 }
 
-img {
-    border-radius: 50px;
-    width: 300px;
-    height: 300px;
+.heading {
+    text-align: center;
 }
 
 .prompt {
